Added vulnerability functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export()
 export(GLcenfa)
+export(biplot)
+export(brStick)
 export(cnfa)
 export(covmat)
 export(departure)
@@ -21,7 +23,6 @@ exportClasses(departure)
 exportClasses(enfa)
 exportClasses(vulnerability)
 exportMethods(raster)
-import(methods)
 import(raster)
 import(sp)
 importFrom(Rcpp,sourceCpp)
@@ -32,6 +33,7 @@ importFrom(grDevices,chull)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
 importFrom(graphics,legend)
+importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(magrittr,"%>%")
@@ -43,6 +45,7 @@ importFrom(snow,clusterExport)
 importFrom(snow,makeCluster)
 importFrom(snow,stopCluster)
 importFrom(stats,cov)
+importFrom(stats,ecdf)
 importFrom(stats,na.omit)
 importFrom(stats,sd)
 importFrom(utils,setTxtProgressBar)
